[package]
name = "yuki_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.52", features = ["gossipsub", "mdns", "noise", "tcp", "dns", "yamux", "identify", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
rand = "0.8"
bip39 = "1.1"
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }

