[package]
name = "yuki_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- UPDATED LIBP2P ---
# We are replacing "derive" with the correct feature name: "macros"
libp2p = { version = "0.53", features = ["gossipsub", "mdns", "noise", "tcp", "dns", "yamux", "identify", "tokio", "macros"] } 
tokio = { version = "1.37.0", features = ["full"] }
# --- END UPDATES ---

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
rand = "0.8"
bip39 = "1.1"
futures = "0.3"